issues: really fix #647 and prevent jump to from shifting to left.

--- a/github-dark.css
+++ b/github-dark.css
@@ -1884,7 +1884,7 @@
     max-width: 250px !important;
   }
   .jump-to-suggestions [aria-selected="true"] .jump-to-suggestion-name.css-truncate-target {
-    max-width: 50% !important;
+    width: 50% !important;
   }
   /* tooltip */
   .octotip {
